Fix Collapsed Navbar Media Query Break Point Style

--- a/src/components/Header/style.css
+++ b/src/components/Header/style.css
@@ -166,7 +166,7 @@
 }
 
 
-@media only screen and (min-device-width: 481px) and (max-device-width: 768px) {
+@media only screen and (min-width: 481px) and (max-width: 768px) {
 
     /* Ipad */
     .title {
@@ -261,7 +261,7 @@
 
 }
 
-@media only screen and (min-device-width: 768px) and (max-device-width: 1024px) {
+@media only screen and (min-width: 768px) and (max-width: 1024px) {
 
     .content {
         top: 110px;
